--- a/fotos.html
+++ b/fotos.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <audio autoplay loop>
-  <source src= "musica.mp3" type="audio/mpeg">
+  <source src= "música.mp3" type="audio/mpeg">
   Seu navegador não suporta áudio.
 </audio>
 <header>
