--- a/fotos.html
+++ b/fotos.html
@@ -84,7 +84,7 @@
   <h1>Feliz Dia dos Namorados 💕</h1>
   <p>Momentos que fazem meu coração bater mais forte</p>
 </header>
-
+<h3>Clique na tela</h3>
 <section class="gallery">
   <div class="photo-card">
     <img src= "foto1.JPG" alt="Nosso momento 1">
