Atualizar o fotos.html

--- a/fotos.html
+++ b/fotos.html
@@ -134,7 +134,7 @@
   </div>
 	<div class="photo-card">
     <img src= "foto6.JPG" alt="Nosso momento 3">
-    <div class="caption">"Cada aventura com você e inesquecivel so por ter você"</div>
+    <div class="caption">"Cada aventura com você e inesquecivel só por ter você"</div>
   </div>
 	<div class="photo-card">
     <img src= "foto7.JPG" alt="Nosso momento 3">
