--- a/fotos.html
+++ b/fotos.html
@@ -88,7 +88,7 @@
   </style>
 </head>
 <body>
-  <audio id="musica" loop>
+  <audio id="musica" autoplay loop>
   <source src="musica.mp3" type="audio/mpeg">
 </audio>
 
